--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 dj-database-url==0.5.0
-Django==4.0.2
+Django
 django-heroku==0.3.1
 docopt==0.6.2
 gunicorn==20.1.0
